m/k3d/demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder-amanibhavam
