m/k3d/k3d-admin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
