m/k3d/k3d-tailscale-operator.yaml
# Copyright (c) Tailscale Inc & AUTHORS
# SPDX-License-Identifier: BSD-3-Clause

apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator
  namespace: tailscale
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: operator
  template:
    metadata:
      labels:
        app: operator
    spec:
      serviceAccountName: operator
      volumes:
        - name: oauth
          secret:
            secretName: operator-oauth
      containers:
        - name: operator
          image: tailscale/k8s-operator:unstable
          resources:
            requests:
              cpu: 500m
              memory: 100Mi
          volumeMounts:
            - name: oauth
              mountPath: /oauth
              readOnly: true
