m/k3d/bootstrap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.defn.xxx`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: wildcard-defn-xxx-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.defn.xxx`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: wildcard-defn-xxx-tls
