m/k3d/k3d-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.defn.xxx`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
